--- a/css/styles.css
+++ b/css/styles.css
@@ -1,14 +1,24 @@
 body {
     background-color: #f0ece2;
+    font-family: "Trebuchet MS", Helvetica, sans-serif;
 }
 
 hr {
     border-style: dotted none none;
     border-width: thick;
     width: 5%;
-    border-color: #dfd3c3;
+    border-color: #c7b198;
 }
 
-img {
+h1 {
+    color: #596e79;
+}
+
+h3 {
+    color: #596e79;
+}
+
+#prof-pic {
     height: 200px;
+    border-radius: 50%;
 }
